Add wheel odometry count message.

--- a/src/rosserial/rosserial_mbed/CMakeLists.txt
+++ b/src/rosserial/rosserial_mbed/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(rosserial_mbed)
 
-find_package(catkin REQUIRED COMPONENTS message_generation)
+find_package(catkin REQUIRED COMPONENTS
+  message_generation
+)
 
 add_message_files(FILES
                   Adc.msg
+                  wheel_count.msg
                  )
 
 add_service_files(FILES
