Add IMU message.

--- a/src/rosserial/rosserial_mbed/CMakeLists.txt
+++ b/src/rosserial/rosserial_mbed/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(rosserial_mbed)
 
+# Disable message generation for lisp and java
+set(ENV{ROS_LANG_DISABLE} "genlisp:genjava")
+
 find_package(catkin REQUIRED COMPONENTS
   message_generation
 )
@@ -8,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(FILES
                   Adc.msg
                   wheel_count.msg
+                  papa_imu.msg
                  )
 
 add_service_files(FILES
